[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Interactables/itemSlots.gd" type="Script" id=1]
[ext_resource path="res://assets/Character/itemSlot.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/Silkscreen-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/holdableItems/candle.png" type="Texture" id=4]
[ext_resource path="res://assets/holdableItems/keyDown.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/barBackground.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/progressBar.png" type="Texture" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[node name="itemSlots" type="Node2D"]
script = ExtResource( 1 )

[node name="slot_1" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 62.7001, 0 )

[node name="holder" type="Sprite" parent="slot_1"]
editor/display_folded = true
position = Vector2( 868.455, 71.2641 )
scale = Vector2( 2.04387, 1.76916 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="slot_1/holder"]
margin_left = -14.0
margin_top = -19.0
margin_right = 11.0
margin_bottom = 26.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "1
"

[node name="slot1_sprite" type="Sprite" parent="slot_1/holder"]
texture = ExtResource( 4 )

[node name="keySlot" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 62.7001, 99.9335 )

[node name="holder" type="Sprite" parent="keySlot"]
position = Vector2( 868.455, 71.2641 )
scale = Vector2( 2.04387, 1.76916 )
texture = ExtResource( 2 )

[node name="slot1_sprite" type="Sprite" parent="keySlot/holder"]
scale = Vector2( 0.7, 0.8 )
texture = ExtResource( 5 )

[node name="itemDurability" type="TextureProgress" parent="."]
margin_left = 899.724
margin_top = 95.291
margin_right = 963.724
margin_bottom = 135.291
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
tint_progress = Color( 0.129412, 0.662745, 0.262745, 1 )
